tests/snapshots/graphite_client__tests__client_builder_defaults.snap
---
source: tests/graphite_client.rs
assertion_line: 42
expression: client
---
GraphiteClient {
    connection: TcpStream {
        addr: <EPHEMERAL>,
        peer: 127.0.0.1:20031,
        fd: <EPHEMERAL>,
    },
    sock_addr: 127.0.0.1:20031,
    _address: "127.0.0.1",
    _port: 20031,
    retries: 3,
    timeout: 5s,
}
